# Rust-Developer-Basic

./: .gitignore  README.md
2024-11/Lesson-5-18.12.2024/: README.md
2024-11/Lesson-7-18.12.2024/: README.md
Lesson-13-18.07.2024/sanbox/: Cargo.toml
Lesson-14-20.07.2023/fridge_emulator/: Cargo.toml
Lesson-15-26.01.2024/crypto-algorithms/: Cargo.toml
Lesson-16-27.07.2023/mini_bar_emulator/: Cargo.toml
Lesson-16-27.07.2023/mini_bar_emulator_generic/: Cargo.toml
Lesson-16-27.07.2023/mini_bar_emulator_generic/src/: food.rs  fridge.rs  lib.rs  main.rs
Lesson-19-14.02.2024/example/: Cargo.toml
Lesson-19-14.02.2024/test_value/: Cargo.toml
Lesson-19-14.02.2024/tracer/: Cargo.toml
Lesson-19-15.08.2023/logger/: .gitignore
Lesson-20-13.08.2024/extra_syntax/: Cargo.toml
Lesson-20-17.08.2023/macros/: .gitignore  Cargo.toml
Lesson-21-15.08.2024/grpc_hello_world/: Cargo.toml
Lesson-21-15.08.2024/grpc_hello_world/grpc_hello_world_server/: Cargo.toml  build.rs
Lesson-22-20.08.2024/proc-example/: Cargo.toml
Lesson-25-15.03.2024/errors_and_strings/: Cargo.toml
Lesson-25-15.03.2024/errors_and_strings/src/: option_and_result.rs  thiserror_and_anyhow.rs
Lesson-27-10.09.2024/im_and_rc/: Cargo.toml
Lesson-3-07.06.2023/todo-after-lesson/: Cargo.toml
Lesson-31-05.04.2024/students/: Cargo.toml
Lesson-32-9.10.2023/sorted_collections/: Cargo.toml
Lesson-34-08.10.2024/chat_room/: Cargo.toml
Lesson-35-10.10.2024/qa/: Cargo.toml
Lesson-7-22.06.2023/: PROBLEMS.md
Open-Lesson-22.05.2023/dynamic_satellite/: Cargo.toml
(+81 files in other folders)
