[package]
name = "mini_bar_emulator_generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Библиотека для (де-)сериализации данных. Подключаем фичу для дерайв-макроса
serde = { version = "1.0.173", features = ["derive"] }
# Библиотека для (де-)сериализации конкретно из/в JSON
serde_json = "1.0.103"
