[package]
name = "errors_and_strings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "option_and_result"
path = "src/option_and_result.rs"

[[bin]]
name = "thiserror_and_anyhow"
path = "src/thiserror_and_anyhow.rs"

[[bin]]
name = "dir_printer"
path = "src/dir_printer.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
eyre = "0.6.12"
thiserror = "1.0.58"
