[package]
name = "grpc_hello_world_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true

[build-dependencies]
tonic-build.workspace = true
